content/browser/media/android/browser_surface_view_manager.h
@@ -38,6 +38,14 @@ class CONTENT_EXPORT BrowserSurfaceViewManager
   // Send a message to return the surface id to the caller.
   bool SendSurfaceID(int surface_id);
 
+  // Synchronously notify the decoder that the surface is being destroyed so it
+  // can stop rendering to it. This sends a message to the GPU process. Without
+  // this, the MediaCodec decoder will start throwing IllegalStateException, and
+  // crash on some devices (http://crbug.com/598408). There is no way for us to
+  // make sure the surface outlives the decoder because Android initiates the
+  // destruction in some cases.
+  void SendDestroyingVideoSurfaceIfRequired(int surface_id);
+
   RenderFrameHost* const render_frame_host_;
 
   // The surface id of the ContentVideoView surface.
